--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ latex2html =  pdf2image; Pillow
 interface = 
     console-menu; platform_system=="Windows"
     bullet; platform_system=="Linux" or platform_system=="Darwin"
+    wolframalpha
 
 [options.entry_points]
 console_scripts =
